--- a/views/grid.html
+++ b/views/grid.html
@@ -15,7 +15,8 @@
                 <md-checkbox ng-model="data._checked"></md-checkbox>
             </td>
             <td ng-repeat="col in config.columns">
-                <span ng-if="!col.edit" ng-bind="data[col.field]" style="{{col.style}}"></span>
+                <span ng-if="!col.edit && col.render" ng-bind-html="col.render(data[col.field])" style="{{col.style}}"></span>
+                <span ng-if="!col.edit && !col.render" ng-bind="data[col.field]" style="{{col.style}}"></span>
                 <div ng-if="col.edit">
                     <div zl-grid-edit grid-model="data[col.field]" grid-after-edit="onAfterEdit(value, col, data)"></div>
                 </div>
