--- a/views/grid.edit.html
+++ b/views/grid.edit.html
@@ -1,4 +1,4 @@
 <div class="zl-grid-edit" ng-dblclick="onEdit($event)">
     <span ng-bind="gridModel" ng-show="!edit"></span>
-    <input type="text" tabindex="-1" ng-model="gridModel" ng-show="edit" ng-blur="cancelEdit()" ng-keyup="onEnter($event)" zl-focus-on="zlGridEditInput"/>
+    <input type="text" tabindex="-1" ng-model="gridModel" ng-show="edit" ng-blur="cancelEdit($event)" ng-keyup="onEnter($event)" zl-focus-on="zlGridEditInput"/>
 </div>
