--- a/views/grid.html
+++ b/views/grid.html
@@ -21,7 +21,7 @@
                 <span ng-if="!col.edit && !col.render" ng-bind="data[col.field]" style="{{col.style}}"></span>
 
                 <div ng-if="col.edit && col.editType === 'input'">
-                    <div zl-grid-edit grid-model="data[col.field]" grid-after-edit="onAfterEdit(value, col, data)" grid-input-type="{{col.editInputType}}"></div>
+                    <div zl-grid-edit grid-model="data[col.field]" grid-after-edit="onAfterEdit(value, col, data)"></div>
                 </div>
                 <div ng-if="col.edit && col.editType === 'select'">
                     <div zl-grid-edit-select grid-model="data[col.field]" grid-edit-type="col.editType" grid-edit-data="col.editData()" grid-after-edit="onAfterEdit(value, col, data)"></div>
