--- a/views/community.pick.html
+++ b/views/community.pick.html
@@ -1,6 +1,6 @@
 <div>
     <md-autocomplete ng-if="!pickChips" flex required
-                     md-selected-item="ngModel"
+                     md-selected-item="pick.ngModel"
                      md-search-text="searchText"
                      md-items="item in querySearch(searchText)"
                      md-no-cache="true"
@@ -18,7 +18,7 @@
     </md-autocomplete>
 
 
-    <md-chips ng-if="pickChips" ng-model="ngModel" md-autocomplete-snap md-require-match>
+    <md-chips ng-if="pickChips" ng-model="pick.ngModel" md-autocomplete-snap md-require-match>
         <md-autocomplete
                 md-selected-item="selectedItem"
                 md-search-text="searchText"
