--- a/views/grid.html
+++ b/views/grid.html
@@ -46,7 +46,8 @@
                        ng-click="onBatch(act, $event)"></md-button>
         </div>
         <div flex layout="row" layout-align="end">
-            <md-button ng-if="config.enableExport" ng-click="onExportToCSV()">导出csv</md-button>
+            <md-button ng-if="config.enableExport" ng-click="onExport('xls')">导出xls</md-button>
+            <md-button ng-if="config.enableExport" ng-click="onExport('csv')">导出csv</md-button>
         </div>
     </div>
 </div>
